--- a/details.html
+++ b/details.html
@@ -62,6 +62,6 @@
 <h3>Declaration:</h3>
 <p>I hereby declare that all the information contained in this resume is in accordance with facts or truths to my knowledge. I take full responsibility for the correctness of the said information.</p>
 <br>
-<a href="Contact.html"><h3>Contact</h3></a>
+<a href="contact.html"><h3>Contact</h3></a>
 </body>
 </html>
