--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 					<tr>
 						<td>Choose Your Requirment</td>
 						<td>:</td>
-						<td>>Web Developer</td>
+						<td>Web Developer</td>
 						<td><input type="checkbox" id="scales" name="scales"></td>
 						<td>Frontend Developer</td>
 						<td><input type="checkbox" id="scales" name="scales"></td>
